--- a/west.yml
+++ b/west.yml
@@ -1,3 +1,14 @@
 manifest:
   # minimum west version
   version: 0.8
+
+  projects:
+    - name: doxygen-awesome
+      url: https://github.com/jothepro/doxygen-awesome-css
+      # you can also use SSH instead of HTTPS:
+      # url: git@github.com:jothepro/doxygen-awesome-css.git
+      revision: v2.2.1
+      # if you want to have the latest changes, e.g., during development,
+      # specify the corresponding branch in the revision:
+      # revision: main
+      path: deps/utilities/doxygen-awesome-css
