--- a/west.yml
+++ b/west.yml
@@ -1,11 +1,12 @@
 manifest:
-  # minimum west version
+  # lowest version of the manifest file schema that can parse this file’s data
   version: 0.8
 
   self:
     path: app
 
   projects:
+   # example for an "project" that is sourced from another repository and managed by west.
     - name: doxygen-awesome
       url: https://github.com/jothepro/doxygen-awesome-css
       # you can also use SSH instead of HTTPS:
